# postgres-graph-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
postgres_graph_rag/: __init__.py  core.py  database.py  extractor.py  models.py
postgres_graph_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_integration.py  test_scenarios.py  timing_utils.py
