[project]
name = "postgres-graph-rag"
version = "0.1.0"
description = "A lean GraphRAG library using Postgres/pgvector as the sole database"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hagen", email = "hagen@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg[binary,pool]>=3.1.18",
    "pgvector>=0.2.5",
    "openai>=1.12.0",
    "google-genai>=0.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/h4gen/postgres-graph-rag"
Repository = "https://github.com/h4gen/postgres-graph-rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["postgres_graph_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
